@@ -731,7 +731,7 @@ class GO_Files_Model_Folder extends GO_Base_Db_ActiveRecord {
 			GO::debug("Filesystem folder ".$this->path." is not in sync with database. Will sync now.");
 			$this->syncFilesystem ();
 			$this->mtime=$this->fsFolder->mtime();
-			$this->save();
+			$this->save(true);
 		}
 	}
 	
